# temporal-openai-agents-sdk

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  TROUBLESHOOTING.md  check_setup.py  copy_skills.py  create_simple_skill.py  create_skill.py  docker-compose.yml  install_requirements.py  pyproject.toml  quick_start.py  requirements.txt  setup.py  tools.py  update_agents.py  validate_skills.py  verify_setup.py
cursor-rules-examples/: README.md
cursor-rules-examples/.cursorrules/: index.mdc
examples/: __init__.py
examples/integration/: README.md  __init__.py  multi_step_chain.py  multi_step_chain_worker.py  run_multi_step_chain.py  run_workflow.py  worker.py  workflows.py
examples/openai/: README.md  __init__.py  basic_agent.py  function_calling.py
examples/temporal/: README.md  __init__.py  run_workflow.py  worker.py  workflows.py
open-router/: .env.example  README.md  client.py  example.py  setup_openrouter.py  workflows.py
skills/: README.md
skills/agent-implementation/: SKILL.md
skills/docker-containerization/: SKILL.md
skills/frontend-implementation/: SKILL.md
skills/go-backend-tool/: SKILL.md
skills/openai-agents/: SKILL.md
skills/python-best-practices/: SKILL.md
skills/temporal-workflows/: SKILL.md
skills/test-scraper/: SKILL.md
tests/: conftest.py  test_workflows.py
tools/: README.md
